[gd_scene load_steps=9 format=1]

[ext_resource path="res://game/gamemodes/proto_mode.gd" type="Script" id=1]
[ext_resource path="res://game/ui/in_game/player_scoreboard/player_scoreboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/ui/misc/sprites/black_box.png" type="Texture" id=3]
[ext_resource path="res://game/maps/ph_map_01/ph_map_01_wide.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/core/camera/camera_shake.gd" type="Script" id=5]
[ext_resource path="res://game/songs/ls_song_ph.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=2]

resource/name = "fade_in_black"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_anim_fade_in_end"
} ]
}

[sub_resource type="Animation" id=1]

resource/name = "fade_out_black"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_anim_fade_out_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundMuisc:stream/volume_db")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -50.0 ]
}

[node name="ProtoMode" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="UILayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="PlayerScoreboard" parent="UILayer" instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="UILayer"]

transform/scale = Vector2( 25, 15 )
texture = ExtResource( 3 )
centered = false

[node name="GameArea" type="Node2D" parent="."]

[node name="GameBoard" parent="GameArea" instance=ExtResource( 4 )]

transform/pos = Vector2( 260, 120 )

[node name="Camera2D" type="Camera2D" parent="GameArea"]

transform/pos = Vector2( 640, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_in_black = SubResource( 2 )
anims/fade_out_black = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="BackgroundMuisc" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


